New tests added