@@ -7,6 +7,7 @@
   
   <properties>  
   	<java.version>1.8</java.version>
+  	<docker.image.repository>joaosam09/myprivaterepo</docker.image.repository>
   </properties>
   
   <parent>
@@ -44,6 +45,29 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-    </plugins>
+      
+      <plugin>
+	  	<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<configuration>
+		  <forkCount>3</forkCount>
+		  <reuseForks>true</reuseForks>
+		  <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+		</configuration>
+	  </plugin>
+	  
+      <plugin>
+          <groupId>com.spotify</groupId>
+          <artifactId>dockerfile-maven-plugin</artifactId>
+          <version>1.4.3</version>
+          <configuration>
+              <repository>${docker.image.repository}</repository>
+              <tag>arithmeticOperationsService</tag>
+              <buildArgs>
+                  <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+              </buildArgs>
+          </configuration>
+      </plugin>
+    </plugins>   
   </build>
 </project>
